# durak

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  cart.cpp  cart.h  game.cpp  game.h  gamer.cpp  gamer.h  main.cpp  window.cpp  window.h  window.ui
